--- a/current/cloudbakers/pubspec.yaml
+++ b/current/cloudbakers/pubspec.yaml
@@ -23,15 +23,18 @@ dependencies:
   shared_preferences: ^2.2.1  # Added shared_preferences
   http: ^1.3.0  # 🆕 For making API requests
   path_provider: ^2.1.1  # 🆕 (Optional) Helps with file storage
-  googleapis: ^13.2.0
+  googleapis: ^14.0.0
   googleapis_auth: ^1.2.0
   google_fonts: ^6.2.1
+  speech_to_text: ^7.0.0
+  flutter_tts: ^4.2.2
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.3
 flutter:
   uses-material-design: true
   
